--- a/src/app/posts/post-detail/post-detail.component.html
+++ b/src/app/posts/post-detail/post-detail.component.html
@@ -1,12 +1,12 @@
 <mat-card *ngIf="post">
   <img src="{{post.image}}" alt="{{post.title}}">
   <p><small>Posted by {{post.author}} &bull; on {{post.published.toDate() | date: 'fullDate'}}</small></p>
-      <mat-card-actions align="end" *ngIf="auth.currentUserId === post.authorId">
+      <mat-card-actions align="end" *ngIf="authService.currentUserId === post.authorId">
         <button mat-icon-button (click)="editing=true">
           edit
         </button>
       </mat-card-actions>
-      <mat-card-actions align="end" *ngIf="auth.currentUserId === post.authorId">
+      <mat-card-actions align="end" *ngIf="authService.currentUserId === post.authorId">
         <button mat-icon-button (click)="delete()">
           delete
         </button>
