--- a/src/app/posts/post-dashboard/post-dashboard.component.html
+++ b/src/app/posts/post-dashboard/post-dashboard.component.html
@@ -25,7 +25,7 @@
         <textarea rows="10" matInput placeholder="Post Content" [(ngModel)]="content"></textarea>
       </mat-form-field>
       <br>
-      <button mat-raised-button color="accent" (click)="createPost()" [disabled]="!title || !content">{{buttonText}}</button>
+      <button mat-raised-button color="accent" (click)="createPost()" [disabled]="!title || !content || !image">{{buttonText}}</button>
     </mat-expansion-panel>
   </mat-accordion>
 </section>
