--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,10 +1,11 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <span routerLink="/blog">ng-blog</span>
+    <span routerLink="/blog">Balazs Molnar</span>
     <span class="spacer"></span>
     <div *ngIf="auth.afAuth.authState | async as user; else showLogin">
-      <button mat-raised-button color="accent" routerLink="/dashboard">Write a post</button>
+      <button mat-raised-button color="accent" routerLink="/dashboard">New Post</button>
       <span>Hello {{user.displayName}}!</span>
+      
       <button mat-button (click)="auth.logout()"> Logout</button>
     </div>
     <ng-template #showLogin>
