--- a/src/app/posts/post-list/post-list.component.css
+++ b/src/app/posts/post-list/post-list.component.css
@@ -1,14 +1,10 @@
 section{
-    display:  grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-auto-rows: auto;
-    grid-gap: 10px;
-    margin: 0 auto;
+    margin: auto;
     max-width: 95%;
 }
  
 mat-card{
-    margin: 10px 0;
+    margin: 20px auto;
     max-width: 700px;
 }
 img{
