--- a/src/app/posts/post-dashboard/post-dashboard.component.html
+++ b/src/app/posts/post-dashboard/post-dashboard.component.html
@@ -24,9 +24,14 @@
       <mat-form-field>
         <textarea rows="10" matInput placeholder="Post Content" [(ngModel)]="content"></textarea>
       </mat-form-field>
+      <mat-form-field>
+        <textarea rows="10" matInput placeholder="Post Content" [(ngModel)]="content2"></textarea>
+      </mat-form-field>
+      <mat-form-field>
+        <textarea rows="10" matInput placeholder="Post Content" [(ngModel)]="content3"></textarea>
+      </mat-form-field>
       <br>
-      <button mat-raised-button color="accent" (click)="createPost()">{{buttonText}}</button>
+      <button mat-raised-button color="accent" (click)="createPost()" [disabled]="!title || !content || !image">{{buttonText}}</button>
     </mat-expansion-panel>
   </mat-accordion>
 </section>
-<!-- [disabled]="!title || !content || !image" -->
