--- a/src/app/posts/post-list/post-list.component.css
+++ b/src/app/posts/post-list/post-list.component.css
@@ -6,7 +6,10 @@ section{
 mat-card{
     margin: 20px auto;
     max-width: 700px;
+    box-shadow: none !important;
+    margin-bottom: 4%;
 }
+
 img{
     width: 100%
 }
@@ -14,4 +17,31 @@ img{
 mat-card-content:focus{
     outline: none;
     border: 0;
+}
+
+.clickable{
+    cursor: pointer;
+}
+
+.grey{
+    color: #666666;
+}
+
+h2{
+    font-size: 26px;
+}
+p{
+    color: #666666;
+    text-align: justify;
+    letter-spacing: 0.5px;
+}
+
+button{
+    padding: 10px 30px;
+    color: white;
+    border: none;
+    background: #DAA520; 
+}
+.right{
+    text-align: right;
 }
